# Learning

./: Interview_QA_Embedded.md  TODO_Embedded_Interview.md
EBTresos/: Can.arxml  Can.ecuc  CanTemplate.vm  Com.arxml  Com.ecuc  EB_Tresos.md  EcuC.arxml  Os.arxml
EBTresos/Template/: anchors.xml  ant_generator.xml  plugin.xml
EBTresos/Template/Resource/: chip_01.properties  chip_02.properties
EBTresos/Template/config/: EcuC.xdm  GPIO.xdm  Resource.xdm
ESP32/: firebase_cert.pem  get_pem_cdm.txt
ESP32/RTOS/RTOS_Learning/: CMakeLists.txt  README.md  required_1.md  required_2.md
ESP32/RTOS/RTOS_Learning/main/: CMakeLists.txt  main.c  multicore.c  smarthome.c
ESP32/RTOS/SmartHome/: CMakeLists.txt  README.md  sdkconfig
ESP32/RTOS/SmartHome/main/: apmode_cfg.c  cmd.txt  demo.c  demo_1.c  index.html  ledc_basic_example_main.c  scan_wf.c  smart_home.c  test.c
ESP32/SPIFFS_SCAN/: CMakeLists.txt  sdkconfig
ESP32/SPIFFS_SCAN/components/components/freertos/FreeRTOS-Kernel/include/freertos/: task.h
ESP32/SPIFFS_SCAN/main/: spiffsgen_example_main.c
ESP32/SPIFFS_SCAN/spiffs_image/: scan.html
ESP32/Scan_SPIFF/: CMakeLists.txt  README.md  README_new.md  partitions.csv  partitions_example.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
ESP32/Scan_SPIFF/components/components/lwip/: CMakeLists.txt  README_WINDOWS_BUILD_FIX.md
ESP32/Scan_SPIFF/components/components/lwip/port/: windows_file_utils.cmake
ESP32/Scan_SPIFF/components/components/lwip/port/esp32xx/: windows_build_helper.bat  windows_dep_workaround.c  windows_ninja_workaround.ninja
ESP32/Scan_SPIFF/main/: CMakeLists.txt  apmode_cfg.c  gpio_control.c  http_server.c  main.c  sms_task.c  sntp_handler.c  spiffs_handler.c  uart_handler.c  wifi_manager.c
ESP32/Scan_SPIFF/main/include/: common_types.h  gpio_control.h  http_server.h  sms_task.h  sntp_handler.h  spiffs_handler.h  time_utils.h  uart_handler.h  wifi_manager.h
ESP32/Scan_SPIFF/spiffs_data/: wifi_config.html
Linker/: Makefile  VectorTable.xlsx  diagram.drawio  linker.md  log.txt  main.c  main.dump  main.map  run.bat  stm32l443rct6_startup.c  stm32l443rct6_startup.ld  syscalls.c
RTOS/: rtos.md  rtos_remake.c
STM32/: asm.md  instruction.md  user_guide.md
STM32/Asm/: Assignment_1.s  Assignment_2.s  IF.s  Learn_AND_ORR_BIC_ORN_EOR.s  Learn_CMP_Label_B_BL_BX.s  Learn_Clear_Insert_Bit.s  Learn_LDR_STR.s  Learn_LSL_LSR_ROTATE.s  Learn_MOV_ADD.s  Learn_SUB_MLA_MLS_RSB_MUL.s  Learn_Switch_Case.s  condition.s  fixing.c  loop.s  main.c  main.s  main.uvguix.ducso  main.uvoptx  main.uvprojx  temp.cpp
STM32/Asm/Listings/: main.map
STM32/Asm/Objects/: fixing.d  main.axf  main.build_log.htm  main.htm  main.lnp  main_1.d  main_Target 1.dep  system_stm32l4xx.d
STM32/Asm/RTE/_Target_1/: RTE_Components.h
STM32/BuildOSFreeRTOS/: BuildOS.md  ChangeContext.md  CreateTask.drawio  Example.md  ExcReturn.md  main.c  node_l452re.repl  os_task.c  sequence.md
Testing/: testing.md
